update: clean code